<resources>
    <string name="app_name">RUNIVPM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuova_mappa_nome_hint">Nome Mappa</string>
    <string name="nuovo_beacon_nome_hint">Nome Beacon</string>
    <string name="nuovo_beacon_quota_hint">Quota</string>
    <string name="nuovo_beacon_larghezza_hint">Larghezza</string>
    <string name="nuovo_beacon_x_hint">x</string>
    <string name="nuovo_beacon_y_hint">y</string>
    <string name="nuovo_beacon_x_meter_hint">x_meter</string>
    <string name="nuovo_beacon_y_meter_hint">y_meter</string>
    <string name="nuovo_beacon_id_mappa_hint">id_mappa</string>
    <string name="nuova_mappa_immagine_hint">Immagine Mappa</string>
    <string name="directory_mappe">/idsAdmin/map_img/</string>
    <string name="title_activity_modifica_mappa">ModificaMappaActivity</string>
    <string name="title_activity_beacon_list">BeaconList</string>
    <string name="title_activity_percorso">PercorsoActivity</string>
    <string name="action_back">Indietro</string>
    <string name="action_confirm">Conferma</string>
    <string name="title_activity_navigation">Naviga</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="search_hint">Inserisci beacon di partenza</string>
    <string name="selected_node">Hai selezionato: </string>
    <string name="error_connection_failed">Errore di connessione, controlla la tua connessione internet</string>
    <string name="title_activity_logow">LogowActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="label_select_path">Percorso %d</string>
    <string name="find_nearest_exit">Cerco l\'uscita più vicina</string>
    <string name="select_path">Seleziona un percorso</string>
    <string name="computing_route">Calcolando il percorso migliore</string>
    <string name="please_wait">Attendere per favore...</string>
    <string name="next_node">Poi</string>
    <string name="action_go_ahead">Prosegui dritto</string>
    <string name="action_turn_right">Gira a destra</string>
    <string name="action_turn_left">Gira a sinistra</string>
    <string name="action_turn_back_right">Curva stretta a destra</string>
    <string name="action_turn_back_left">Curva stretta a sinistra</string>
    <string name="action_go_upstairs">Sali le scale</string>
    <string name="action_go_downstairs">Scendi le scale</string>
    <string name="action_exit">Esci dall\'aula</string>
    <string name="action_destination_reached">Hai raggiunto la destinazione</string>
    <string name="toward_node">verso il punto %1$s</string>
    <string name="congratulation">Complimenti!</string>
    <string name="auth_preference">com.ids.idsuserapp.auth_file</string>
    <string name="emergency_subscribe_error">Errore di comunicazione con il server emergenze</string>
    <string name="local_position">com.ids.userapp.position</string>
    <string name="emergency_dialog_title">Emergenza in corso!</string>
    <string name="emergency_dialog_description">Ti guideremo verso l\'uscita più vicina</string>
    <string name="title_activity_stop_emergency">StopEmergencyActivity</string>
    <string name="api_logout">http://159.89.102.18/api/logout</string>


</resources>
