<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">


    <EditText
        android:id="@+id/nome_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_nome_hint"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/quota_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/nome_modifica_beacon"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_quota_hint"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/larghezza_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/quota_modifica_beacon"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_larghezza_hint"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/x_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/larghezza_modifica_beacon"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_x_hint"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/y_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/x_modifica_beacon"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_y_hint"
        android:textColor="@color/colorPrimary" />
<!--
    <EditText
        android:id="@+id/x_meter_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/y_modifica_beacon"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_x_meter_hint"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/y_meter_modifica_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/x_meter_modifica_beacon"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nuovo_beacon_y_meter_hint"
        android:textColor="@color/colorPrimary" />
-->

</RelativeLayout>