<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MapNavigationFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.dii.ids.application.main.navigation.SelectionFromMapFragment">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/navigation_standard_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="@dimen/standard_elevation"
                android:gravity="top"
                android:title="@string/title_activity_navigation"
                >

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dove vuoi andare?"
                    android:textColor="@android:color/white" />

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:id="@+id/toolbar_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/placeholder"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />

                <TextView
                    android:id="@+id/node"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    />

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/action_buttons_container"
            android:layout_below="@+id/toolbar_container">

            <com.dii.ids.application.views.PinView
                android:id="@+id/navigation_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/action_buttons_container"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="16dp"
            android:elevation="@dimen/standard_elevation"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/floor_button_155"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/borderless_white_button"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:text="155"/>

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    />

                <Button
                    android:id="@+id/floor_button_150"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/borderless_white_button"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:text="150"/>

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    />

                <Button
                    android:id="@+id/floor_button_145"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/borderless_white_button"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:text="145"/>

            </LinearLayout>

        </RelativeLayout>


        <!-- Buttons container -->
        <RelativeLayout
            android:id="@+id/action_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:elevation="@dimen/standard_elevation"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/borderless_white_button"
                    android:text="@string/action_back"
                    android:textAllCaps="true"/>

                <!-- Divider -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/borderless_white_button"
                    android:text="@string/action_confirm"
                    android:textAllCaps="true"/>
            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


</FrameLayout>